# AutoSleuth

./: LICENSE  LICENSE.txt  README.md  analysis.py  commands.txt  receiverv2.php
Builder/: codeTemplate.py  payloadBuilder.py  payloadTemplate.dd
Builder/KeyboardLayout/: keyboard_layout.py
Builder/KeyboardLayout/FRENCH/: keyboard_layout_mac_fr.py  keycode_mac_fr.py
Builder/KeyboardLayout/UK/: keyboard_layout_win_uk.py  keycode_win_uk.py
Builder/KeyboardLayout/USA/: keyboard_layout_win_usx.py  keycode_win_usx.py
Hak5_Setup/: README.md  payload.txt
RUST/: Cargo.toml
RUST/src/: main.rs
